[package]
name = "Sxredder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
color-eyre = "0.6.2"
tui = { version = "0.19.0"}
crossterm = { version = "0.25.0" }

[[bin]]
name="sxr"
path ="src/main.rs"
